--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title> Blog da turma</title>
 </head>
 <body>
+    <!--Cabeçalho-->
     <header>
         <h1>Blog da turma</h1>
         <p>Bem-vindos ao nosso espaço de ideias!</p>
     </header>
+    <!--Conteudo Principal-->
     <main>
-        <section>
+        <section> <!--Sessão do conteudo principal-->
             <article class="postagem1">
                 <h2>Primeira Postagem</h2>
                 <p>Hoje aprendemos a criar páginas com HTML e estilizar com CSS. É o primeiro passo para desenvolvemos nossos próprios sites!</p>
@@ -23,6 +25,7 @@
             </article>
         </section>
     </main>
+    <!--Rodapé-->
     <footer class="footer">
         <p>Escrito pelo alunos do instituto da Oportunidade Social - 2025</p>
     </footer>
