--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <p>Hoje aprendemos a criar páginas com HTML e estilizar com CSS. É o primeiro passo para desenvolvemos nossos próprios sites!</p>
             </article>
             <article class="postagem2">
-                <h2>Segunda Postagem!</h2>
+                <h2>Segunda Postagem</h2>
                 <p>CSS nos permite deixar o site mais bonito, mudando as cores, fontes e organizção do conteúdo</p>
             </article>
         </section>
